Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti111_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti111_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti111_translation-it-soma.json
@@ -16,5 +16,5 @@
   "iti111:10.3": "si addestra in quello che conduce alla tranquillità del cuore ",
   "iti111:10.4": "sempre vigile/consapevole, ",
   "iti111:10.5": "sempre risoluto, ",
-  "iti111:10.6": "è chiamato un cercatore di tale entiità. "
+  "iti111:10.6": "è chiamato un cercatore di tale entità. "
 }
