Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti111_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti111_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti111_translation-it-soma.json
@@ -1,6 +1,6 @@
 {
   "iti111:2.1": "Cercatori, vivete con perfetta virtù, con un pātimokkha perfetto; vivete temperati dal pātimokkha, con una condotta e un comportamento perfetto, vedendo il pericolo negli errori più piccoli, addestratevi con i precetti. *** ",
-  "iti111:3.1": "Quando vivrete così, che altro più dovrete fare? ",
+  "iti111:3.1": "Quando vivrete così, che altro più bisogna fare? ",
   "iti111:4.1": "Se mentre cammina, sta in piedi, si siede o si sdraia, un cercatore è libero da smania, avversione, torpore, agitazione e rimorso, ha abbandonato il dubbio, è strenuo e attivo, ha una consolidata consapevolezza/vigilanza, è senza confusione, ha il corpo tranquillo, è senza agitazione con la mente raccolta e unificata, ",
   "iti111:4.2": "allora quel cercatore è detto uno ardente, timorato, sempre in continuo rinvigorimento, risoluto. ",
   "iti111:8.1": "Controllato cammina, controllato  sta in piedi, ",
