--- a/translation/it/soma/sutta/kn/iti/vagga11/iti112_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti112_translation-it-soma.json
@@ -9,7 +9,7 @@
   "iti112:2.8": "Il Buddha ha portato a compimento la via che conduce alla fine del mondo. ",
   "iti112:3.1": "È per via di questa perfetta conoscenza che ha il Buddha, che ha visto, sentito, toccato [con mano], raggiunto, cercato, e riflettuto su ogni cosa di questo mondo con i suoi Deva, Māra, Brahma, asceti, brahmani, esseri divini e umani, ",
   "iti112:3.2": "che viene chiamato Buddha. ",
-  "iti112:4.1": "È per via del fatto che il Buddha ha realizzato la perfetta suprema illuminazione in una notte, e si è completamento emancipato con lo stato del Nibbāna senza carburante/combustibile residuo, e che in quella occasione ha recitato, dichiarato e indicato tutto esattamente com’è, e non altrimenti, ",
+  "iti112:4.1": "È per via del fatto che il Buddha ha realizzato la perfetta suprema illuminazione in una notte, e si è completamento emancipato con lo stadio del Nibbāna senza carburante/combustibile residuo, e che in quella occasione ha recitato, dichiarato e indicato tutto esattamente com’è, e non altrimenti, ",
   "iti112:4.2": "che viene chiamato Buddha. ",
   "iti112:5.1": "Le azioni del Buddha corrispondono alle sue parole e le sue parole corrispondono alle sue azioni. ",
   "iti112:5.2": "È per questo motivo ",
