--- a/translation/it/soma/sutta/kn/iti/vagga11/iti112_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti112_translation-it-soma.json
@@ -22,7 +22,7 @@
   "iti112:7.4": "non viene attratto da nulla nel mondo. ",
   "iti112:8.1": "Saggio vittorioso primo su tutti ",
   "iti112:8.2": "libero da ogni legame* ",
-  "iti112:8.3": "ha ottenuto la serenità più alta ",
+  "iti112:8.3": "ha toccato la serenità più alta ",
   "iti112:8.4": "il Nibbāna dopo cui non c’è nulla da temere ",
   "iti112:9.1": "Il Buddha ha distrutto le compulsioni, ",
   "iti112:9.2": "è indisturbato, ha reciso ogni dubbio, ** ",
