--- a/translation/it/soma/sutta/kn/iti/vagga3/iti27_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga3/iti27_translation-it-soma.json
@@ -6,5 +6,6 @@
   "iti27:4.1": "Come negli ultimi mesi dell’anno in autunno il sole ascende nel cielo tutto chiaro e senza nubi, e giungendo nello spazio aperto distruggendo il grigiore è splendente, abbagliante, luccicante ",
   "iti27:4.2": "allo stesso modo… ",
   "iti27:5.1": "Come nella notte, prima dell’alba la stella del mattino è splendente, abbagliante, luccicante ",
-  "iti27:5.2": "allo stesso modo…. "
+  "iti27:5.2": "allo stesso modo…. ",
+  "iti27:6.1": "Per chi, consapevole, coltiva amore "
 }
