--- a/translation/it/soma/sutta/kn/iti/vagga3/iti27_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga3/iti27_translation-it-soma.json
@@ -8,5 +8,6 @@
   "iti27:5.1": "Come nella notte, prima dell’alba la stella del mattino è splendente, abbagliante, luccicante ",
   "iti27:5.2": "allo stesso modo…. ",
   "iti27:6.1": "Per chi, consapevole, coltiva amore ",
-  "iti27:6.2": "illimitato, "
+  "iti27:6.2": "illimitato, ",
+  "iti27:6.3": "le catene si indeboliscono "
 }
