--- a/translation/it/soma/sutta/kn/iti/vagga3/iti27_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga3/iti27_translation-it-soma.json
@@ -10,5 +10,6 @@
   "iti27:6.1": "Per chi, consapevole, coltiva amore ",
   "iti27:6.2": "illimitato, ",
   "iti27:6.3": "le catene si indeboliscono ",
-  "iti27:6.4": "per colui che vede la distruzione dell’acquisizione. (Carburante / combustibile ) "
+  "iti27:6.4": "per colui che vede la distruzione dell’acquisizione. (Carburante / combustibile ) ",
+  "iti27:7.1": "Se si ama anche una sola creatura con un cuore senza astio (benevolente), "
 }
