Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga3/iti27_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga3/iti27_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga3/iti27_translation-it-soma.json
@@ -11,5 +11,6 @@
   "iti27:6.2": "illimitato, ",
   "iti27:6.3": "le catene si indeboliscono ",
   "iti27:6.4": "per colui che vede la distruzione dell’acquisizione. (Carburante / combustibile ) ",
-  "iti27:7.1": "Se si ama anche una sola creatura con un cuore senza astio (benevolente), "
+  "iti27:7.1": "Se si ama anche una sola creatura con un cuore senza astio (benevolente), ",
+  "iti27:7.2": "si è già così una buona persona. "
 }
