Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga3/iti27_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga3/iti27_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga3/iti27_translation-it-soma.json
@@ -13,5 +13,6 @@
   "iti27:6.4": "per colui che vede la distruzione dell’acquisizione. (Carburante / combustibile ) ",
   "iti27:7.1": "Se si ama anche una sola creatura con un cuore senza astio (benevolente), ",
   "iti27:7.2": "si è già così una buona persona. ",
-  "iti27:7.3": "Con una mente compassionevole verso tutte le creature, "
+  "iti27:7.3": "Con una mente compassionevole verso tutte le creature, ",
+  "iti27:7.4": "la persona nobile crea molto merito/(ricchezza spirituale/opere buone/opere meritevoli), "
 }
