--- a/translation/it/soma/sutta/kn/iti/vagga3/iti27_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga3/iti27_translation-it-soma.json
@@ -14,5 +14,6 @@
   "iti27:7.1": "Se si ama anche una sola creatura con un cuore senza astio (benevolente), ",
   "iti27:7.2": "si è già così una buona persona. ",
   "iti27:7.3": "Con una mente compassionevole verso tutte le creature, ",
-  "iti27:7.4": "la persona nobile crea molto merito/(ricchezza spirituale/opere buone/opere meritevoli), "
+  "iti27:7.4": "la persona nobile crea molto merito/(ricchezza spirituale/opere buone/opere meritevoli), ",
+  "iti27:8.1": "Per conquistare il mondo pieno di esseri viventi, "
 }
