--- a/translation/it/soma/sutta/kn/iti/vagga3/iti27_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga3/iti27_translation-it-soma.json
@@ -15,5 +15,6 @@
   "iti27:7.2": "si è già così una buona persona. ",
   "iti27:7.3": "Con una mente compassionevole verso tutte le creature, ",
   "iti27:7.4": "la persona nobile crea molto merito/(ricchezza spirituale/opere buone/opere meritevoli), ",
-  "iti27:8.1": "Per conquistare il mondo pieno di esseri viventi, "
+  "iti27:8.1": "Per conquistare il mondo pieno di esseri viventi, ",
+  "iti27:8.2": "i saggi reali andarono in giro facendo sacrifici: "
 }
