Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga3/iti27_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga3/iti27_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga3/iti27_translation-it-soma.json
@@ -17,5 +17,6 @@
   "iti27:7.4": "la persona nobile crea molto merito/(ricchezza spirituale/opere buone/opere meritevoli), ",
   "iti27:8.1": "Per conquistare il mondo pieno di esseri viventi, ",
   "iti27:8.2": "i saggi reali andarono in giro facendo sacrifici: ",
-  "iti27:8.3": "dando in sacrificio cavalli, umani, "
+  "iti27:8.3": "dando in sacrificio cavalli, umani, ",
+  "iti27:8.4": "[nomi dei sacrifici] "
 }
