--- a/translation/it/soma/sutta/kn/iti/vagga3/iti27_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga3/iti27_translation-it-soma.json
@@ -18,5 +18,6 @@
   "iti27:8.1": "Per conquistare il mondo pieno di esseri viventi, ",
   "iti27:8.2": "i saggi reali andarono in giro facendo sacrifici: ",
   "iti27:8.3": "dando in sacrificio cavalli, umani, ",
-  "iti27:8.4": "[nomi dei sacrifici] "
+  "iti27:8.4": "[nomi dei sacrifici] ",
+  "iti27:9.1": "(Questi) non valgono nemmeno una sedicesima parte "
 }
