Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga3/iti27_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga3/iti27_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga3/iti27_translation-it-soma.json
@@ -20,5 +20,6 @@
   "iti27:8.3": "dando in sacrificio cavalli, umani, ",
   "iti27:8.4": "[nomi dei sacrifici] ",
   "iti27:9.1": "(Questi) non valgono nemmeno una sedicesima parte ",
-  "iti27:9.2": "del cuore coltivato con l’amore, "
+  "iti27:9.2": "del cuore coltivato con l’amore, ",
+  "iti27:9.3": "così come tutte le stelle delle costellazioni "
 }
