--- a/translation/it/soma/sutta/kn/iti/vagga3/iti27_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga3/iti27_translation-it-soma.json
@@ -21,5 +21,6 @@
   "iti27:8.4": "[nomi dei sacrifici] ",
   "iti27:9.1": "(Questi) non valgono nemmeno una sedicesima parte ",
   "iti27:9.2": "del cuore coltivato con l’amore, ",
-  "iti27:9.3": "così come tutte le stelle delle costellazioni "
+  "iti27:9.3": "così come tutte le stelle delle costellazioni ",
+  "iti27:10.1": "Chi non uccide e non fa uccidere, "
 }
