--- a/translation/it/soma/sutta/kn/iti/vagga3/iti27_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga3/iti27_translation-it-soma.json
@@ -23,5 +23,6 @@
   "iti27:9.2": "del cuore coltivato con l’amore, ",
   "iti27:9.3": "così come tutte le stelle delle costellazioni ",
   "iti27:10.1": "Chi non uccide e non fa uccidere, ",
-  "iti27:10.2": "chi non conquista e non fa conquistare, "
+  "iti27:10.2": "chi non conquista e non fa conquistare, ",
+  "iti27:10.3": "chi ha amore verso tutte le creature "
 }
