--- a/translation/it/soma/sutta/kn/iti/vagga3/iti27_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga3/iti27_translation-it-soma.json
@@ -7,7 +7,7 @@
   "iti27:4.2": "allo stesso modo… ",
   "iti27:5.1": "Come nella notte, prima dell’alba la stella del mattino è splendente, abbagliante, luccicante ",
   "iti27:5.2": "allo stesso modo…. ",
-  "iti27:6.1": "Per chi, consapevole, coltiva amore ",
+  "iti27:6.1": "Per chi, consapevole (vigile), coltiva amore ",
   "iti27:6.2": "illimitato, ",
   "iti27:6.3": "le catene si indeboliscono ",
   "iti27:6.4": "per colui che vede la distruzione dell’acquisizione. (Carburante / combustibile ) ",
