--- a/translation/it/soma/sutta/kn/iti/vagga3/iti27_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga3/iti27_translation-it-soma.json
@@ -8,7 +8,7 @@
   "iti27:5.1": "Come nella notte, prima dell’alba la stella del mattino è splendente, abbagliante, luccicante ",
   "iti27:5.2": "allo stesso modo…. ",
   "iti27:6.1": "Per chi, consapevole (vigile), ",
-  "iti27:6.2": "coltiva amore illimitato, ",
+  "iti27:6.2": "coltiva illimitato amore, ",
   "iti27:6.3": "le catene si indeboliscono ",
   "iti27:6.4": "perché vede la distruzione dell’acquisizione. ",
   "iti27:7.1": "Se si ama anche una sola creatura con un cuore senza astio (benevolente), ",
