Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga3/iti27_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga3/iti27_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga3/iti27_translation-it-soma.json
@@ -17,7 +17,7 @@
   "iti27:7.4": "la persona nobile crea molto merito ",
   "iti27:8.1": "Per conquistare il mondo pieno di esseri viventi, ",
   "iti27:8.2": "i saggi reali andarono in giro facendo sacrifici: ",
-  "iti27:8.3": "dando in sacrificio cavalli, umani, ",
+  "iti27:8.3": "il sacrificio del cavallo, il sacrificio degli esseri umani, ",
   "iti27:8.4": "[nomi dei sacrifici] ",
   "iti27:9.1": "(Questi) non valgono nemmeno una sedicesima parte ",
   "iti27:9.2": "del cuore coltivato con l’amore, ",
