--- a/translation/it/soma/sutta/kn/iti/vagga3/iti27_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga3/iti27_translation-it-soma.json
@@ -18,7 +18,7 @@
   "iti27:8.1": "Per conquistare il mondo pieno di esseri viventi, ",
   "iti27:8.2": "i saggi reali andarono in giro facendo sacrifici: ",
   "iti27:8.3": "il sacrificio del cavallo, il sacrificio umano, ",
-  "iti27:8.4": "[nomi dei sacrifici] ",
+  "iti27:8.4": "il rito , il rito del soma, il rito del non-ostruito. ",
   "iti27:9.1": "(Questi) non valgono nemmeno una sedicesima parte ",
   "iti27:9.2": "del cuore coltivato con l’amore, ",
   "iti27:9.3": "così come tutte le stelle delle costellazioni ",
