--- a/translation/it/soma/sutta/kn/iti/vagga1/iti2_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga1/iti2_translation-it-soma.json
@@ -1,7 +1,7 @@
 {
   "iti2:1.1": "Ho udito che questo è stato detto dal Buddha, dall’Arahant: ",
   "iti2:2.1": "“Cercatori, abbandonate una sola cosa, ",
-  "iti2:2.2": "e il non-ritorno è assicurato. ",
+  "iti2:2.2": "e vi assicuro il non-ritorno. ",
   "iti2:2.3": "E qual è questa cosa? ",
   "iti2:2.4": "L’odio.” ",
   "iti2:3.1": "“Corrotte dall’odio, ",
