--- a/translation/it/soma/sutta/kn/iti/vagga1/iti2_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga1/iti2_translation-it-soma.json
@@ -7,5 +7,6 @@
   "iti2:3.1": "“Corrotte dall’odio, ",
   "iti2:3.2": "le creature giungono a una cattiva destinazione. ",
   "iti2:3.3": "Quando si comprende correttamente (nel modo giusto)  quell’odio, ",
-  "iti2:3.4": "vedendo chiaramente, lo si abbandona. "
+  "iti2:3.4": "vedendo chiaramente, lo si abbandona. ",
+  "iti2:3.6": "non si torna più in questo mondo.” "
 }
