--- a/translation/it/soma/sutta/kn/iti/vagga1/iti3_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga1/iti3_translation-it-soma.json
@@ -1,7 +1,7 @@
 {
   "iti3:1.1": "",
   "iti3:2.1": "“Cercatori, abbandonate una sola cosa, ",
-  "iti3:2.2": "e il non-ritorno è assicurato. ",
+  "iti3:2.2": "e vi assicuro il non-ritorno. ",
   "iti3:2.3": "E qual è questa cosa? ",
   "iti3:2.4": "L’illusione. ",
   "iti3:3.1": "“Confuse dall’illusione, ",
