Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga1/iti4_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga1/iti4_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga1/iti4_translation-it-soma.json
@@ -1,7 +1,7 @@
 {
   "iti4:2.1": "“Cercatori, abbandonate una sola cosa ",
   "iti4:2.2": "e vi assicuro il non-ritorno. ",
-  "iti4:2.3": "Che cosa? ",
+  "iti4:2.3": "Che cosa? [UPDATE PREVIOUS ONES] ",
   "iti4:2.4": "La rabbia. ",
   "iti4:3.1": "Accecati dalla rabbia "
 }
