Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga1/iti7_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga1/iti7_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga1/iti7_translation-it-soma.json
@@ -4,5 +4,5 @@
   "iti7:3.1": "“Chi conosce il tutto come il tutto, ",
   "iti7:3.2": "non si appassiona più di nulla. (da nessuna parte) ",
   "iti7:3.3": "Chi comprende proprio tutto, ",
-  "iti7:3.4": "trascende tutto la sofferenza.” "
+  "iti7:3.4": "trascende tutta la sofferenza.” "
 }
