--- a/translation/it/soma/sutta/kn/iti/vagga1/iti8_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga1/iti8_translation-it-soma.json
@@ -6,6 +6,6 @@
   "iti8:3.4": "torna di nuovo all’esistenza. ",
   "iti8:4.1": "Chi annienta la presunzione, ",
   "iti8:4.2": "liberandosi con l’eradicazione della presunzione ",
-  "iti8:4.3": "e debellando il groviglio della presunzione ",
+  "iti8:4.3": "e debellando il groviglio della presunzione, ",
   "iti8:4.4": "trascende tutta la sofferenza. "
 }
