Translations by sabbamitta to translation/de/site/names_translation-de-site.json

--- a/translation/de/site/names_translation-de-site.json
+++ b/translation/de/site/names_translation-de-site.json
@@ -1594,7 +1594,7 @@
   "names:1593": "Saccanāma ",
   "names:1594": "unabhängiger Buddha ",
   "names:1595": "<a class='ref' href='/mn116'>MN 116</a> ",
-  "names:1596": "Sadāmattā ",
+  "names:1596": "Sadāmattas ",
   "names:1597": "Gottheiten (Devas) ",
   "names:1598": "<a class='ref' href='/dn20'>DN 20</a> ",
   "names:1599": "Sahabhū ",
