Translations by sabbamitta to translation/de/site/names_translation-de-site.json

--- a/translation/de/site/names_translation-de-site.json
+++ b/translation/de/site/names_translation-de-site.json
@@ -1600,7 +1600,7 @@
   "names:1599": "Sahabhū ",
   "names:1600": "Gottheiten (Devas) ",
   "names:1601": "<a class='ref' href='/dn20'>DN 20</a> ",
-  "names:1602": "Sahadhamma ",
+  "names:1602": "Sahadhammas ",
   "names:1603": "Gottheiten (Devas) ",
   "names:1604": "<a class='ref' href='/dn20'>DN 20</a> ",
   "names:1605": "Sahajāti ",
