Translations by sabbamitta to translation/de/sabbamitta/sutta/kn/ja/ja19_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/kn/ja/ja19_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/ja/ja19_translation-de-sabbamitta.json
@@ -1,3 +1,4 @@
 {
-  "ja19:0.1": "Geschichten aus früheren Leben 19 "
+  "ja19:0.1": "Geschichten aus früheren Leben 19 ",
+  "ja19:0.2": "Das Einerbuch "
 }
