--- a/translation/de/sabbamitta/sutta/kn/ja/ja19_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/ja/ja19_translation-de-sabbamitta.json
@@ -1,4 +1,5 @@
 {
   "ja19:0.1": "Geschichten aus früheren Leben 19 ",
-  "ja19:0.2": "Das Einerbuch "
+  "ja19:0.2": "Das Einerbuch ",
+  "ja19:0.3": "Das Kapitel über Sittlichkeit "
 }
