Translations by sabbamitta to translation/de/sabbamitta/sutta/kn/ja/ja19_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/kn/ja/ja19_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/ja/ja19_translation-de-sabbamitta.json
@@ -2,5 +2,6 @@
   "ja19:0.1": "Geschichten aus früheren Leben 19 ",
   "ja19:0.2": "Das Einerbuch ",
   "ja19:0.3": "Das Kapitel über Sittlichkeit ",
-  "ja19:0.4": "Das Gelöbnis-Festmahl "
+  "ja19:0.4": "Das Gelöbnis-Festmahl ",
+  "ja19:1.1": "Wenn du entbunden sein willst, wirst du nach dem Tod entbunden, "
 }
