Translations by sabbamitta to translation/de/sabbamitta/sutta/kn/ja/ja19_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/kn/ja/ja19_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/ja/ja19_translation-de-sabbamitta.json
@@ -3,5 +3,6 @@
   "ja19:0.2": "Das Einerbuch ",
   "ja19:0.3": "Das Kapitel über Sittlichkeit ",
   "ja19:0.4": "Das Gelöbnis-Festmahl ",
-  "ja19:1.1": "Wenn du entbunden sein willst, wirst du nach dem Tod entbunden, "
+  "ja19:1.1": "Wenn du entbunden sein willst, wirst du nach dem Tod entbunden, ",
+  "ja19:1.2": "denn Entbindung bindet. "
 }
