--- a/translation/de/sabbamitta/sutta/kn/ja/ja19_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/ja/ja19_translation-de-sabbamitta.json
@@ -4,5 +4,6 @@
   "ja19:0.3": "Das Kapitel über Sittlichkeit ",
   "ja19:0.4": "Das Gelöbnis-Festmahl ",
   "ja19:1.1": "Wenn du entbunden sein willst, wirst du nach dem Tod entbunden, ",
-  "ja19:1.2": "denn Entbindung bindet. "
+  "ja19:1.2": "denn Entbindung bindet. ",
+  "ja19:1.3": "Bedächtige werden so nicht entbunden; "
 }
