--- a/translation/de/sabbamitta/sutta/kn/ja/ja20_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/ja/ja20_translation-de-sabbamitta.json
@@ -1,4 +1,5 @@
 {
   "ja20:0.1": "Geschichten aus früheren Leben 20 ",
-  "ja20:0.2": "Das Einerbuch "
+  "ja20:0.2": "Das Einerbuch ",
+  "ja20:0.3": "Das Kapitel über Sittlichkeit "
 }
