--- a/translation/de/sabbamitta/sutta/kn/ja/ja20_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/ja/ja20_translation-de-sabbamitta.json
@@ -1,5 +1,6 @@
 {
   "ja20:0.1": "Geschichten aus früheren Leben 20 ",
   "ja20:0.2": "Das Einerbuch ",
-  "ja20:0.3": "Das Kapitel über Sittlichkeit "
+  "ja20:0.3": "Das Kapitel über Sittlichkeit ",
+  "ja20:0.4": "Trinken mit dem Schilfrohr: Geschichte aus einem früheren Leben "
 }
