--- a/translation/de/site/name/sutta/ja-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/ja-name_translation-de-site.json
@@ -21,7 +21,7 @@
   "ja-name:20.ja17": "Sturmwind ",
   "ja-name:21.ja18": "Das Festmahl für die Toten ",
   "ja-name:22.ja19": "Das Gelöbnis-Festmahl ",
-  "ja-name:23.ja20": "Trinkhalme ",
+  "ja-name:23.ja20": "Trinken mit dem Schilfrohr ",
   "ja-name:24.ja-kurungavagga": "Das Kapitel mit der Gazelle ",
   "ja-name:25.ja21": "Die Gazelle ",
   "ja-name:26.ja22": "Der Hund ",
