--- a/translation/de/sabbamitta/sutta/kn/ja/ja20_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/ja/ja20_translation-de-sabbamitta.json
@@ -3,5 +3,6 @@
   "ja20:0.2": "Das Einerbuch ",
   "ja20:0.3": "Das Kapitel über Sittlichkeit ",
   "ja20:0.4": "Trinken mit dem Schilfrohr: Geschichte aus einem früheren Leben ",
-  "ja20:1.1": "Da man Fußspuren sieht, die zum Wasser hinabführen, "
+  "ja20:1.1": "Da man Fußspuren sieht, die zum Wasser hinabführen, ",
+  "ja20:1.2": "und keine, die herauskommen, "
 }
