Translations by sabbamitta to translation/de/sabbamitta/sutta/kn/ja/ja20_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/kn/ja/ja20_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/ja/ja20_translation-de-sabbamitta.json
@@ -4,5 +4,6 @@
   "ja20:0.3": "Das Kapitel über Sittlichkeit ",
   "ja20:0.4": "Trinken mit dem Schilfrohr: Geschichte aus einem früheren Leben ",
   "ja20:1.1": "Da man Fußspuren sieht, die zum Wasser hinabführen, ",
-  "ja20:1.2": "und keine, die herauskommen, "
+  "ja20:1.2": "und keine, die herauskommen, ",
+  "ja20:1.3": "werden wir durch einen Schilfhalm Wasser trinken: "
 }
