--- a/translation/de/site/name/sutta/mn-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/mn-name_translation-de-site.json
@@ -92,7 +92,7 @@
   "mn-name:91.mn-rajavagga": "Das Kapitel über Könige ",
   "mn-name:92.mn81": "Mit Ghaṭīkāra ",
   "mn-name:93.mn82": "Mit Raṭṭhapāla ",
-  "mn-name:94.mn83": "Vom König Makhādeva ",
+  "mn-name:94.mn83": "Über den König Maghadeva ",
   "mn-name:95.mn84": "Bei Madhurā ",
   "mn-name:96.mn85": "Mit dem Prinzen Bodhi ",
   "mn-name:97.mn86": "Mit Aṅgulimāla ",
