--- a/translation/de/sabbamitta/sutta/mn/mn83_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn83_translation-de-sabbamitta.json
@@ -1,4 +1,5 @@
 {
   "mn83:0.1": "Mittlere Lehrreden 83 ",
-  "mn83:0.2": "Über den König Maghadeva "
+  "mn83:0.2": "Über den König Maghadeva ",
+  "mn83:1.1": "So habe ich es gehört: "
 }
