Translations by sabbamitta to translation/de/sabbamitta/sutta/kn/ja/ja9_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/kn/ja/ja9_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/ja/ja9_translation-de-sabbamitta.json
@@ -2,7 +2,7 @@
   "ja9:0.1": "Geschichten aus früheren Leben 9 ",
   "ja9:0.2": "Das Einerbuch ",
   "ja9:0.3": "Das Kapitel über das Unfehlbare ",
-  "ja9:0.4": "Makhadeva: Geschichte aus einem früheren Leben ",
+  "ja9:0.4": "Maghadeva: Geschichte aus einem früheren Leben ",
   "ja9:1.1": "Oben auf meinem Haupt ",
   "ja9:1.2": "sprossen sie, diese Diebe des Lebens. ",
   "ja9:1.3": "Götterboten sind erschienen – ",
