Translations by sabbamitta to translation/de/site/name/sutta/ja-name_translation-de-site.json

--- a/translation/de/site/name/sutta/ja-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/ja-name_translation-de-site.json
@@ -9,7 +9,7 @@
   "ja-name:8.ja6": "Göttereigenschaften ",
   "ja-name:9.ja7": "Die Reisigsammlerin ",
   "ja-name:10.ja8": "Der Ortsvorsteher ",
-  "ja-name:11.ja9": "Makhadeva ",
+  "ja-name:11.ja9": "Maghadeva ",
   "ja-name:12.ja10": "Selig leben ",
   "ja-name:13.ja-silavagga": "Das Kapitel über Sittlichkeit ",
   "ja-name:14.ja11": "Der Hirsch mit Namen Glücksmal ",
