Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn83_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn83_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn83_translation-de-sabbamitta.json
@@ -2,5 +2,5 @@
   "mn83:0.1": "Mittlere Lehrreden 83 ",
   "mn83:0.2": "Über den König Maghadeva ",
   "mn83:1.1": "So habe ich es gehört: ",
-  "mn83:1.2": "Einmal hielt sich der Buddha bei Mithilā im Mangowäldchen Maghadeva auf. "
+  "mn83:1.2": "Einmal hielt sich der Buddha bei Mithilā in Maghadevas Mangowäldchen auf. "
 }
