--- a/translation/de/sabbamitta/sutta/mn/mn83_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn83_translation-de-sabbamitta.json
@@ -4,5 +4,6 @@
   "mn83:1.1": "So habe ich es gehört: ",
   "mn83:1.2": "Einmal hielt sich der Buddha bei Mithilā in Maghadevas Mangowäldchen auf. ",
   "mn83:2.1": "Da lächelte der Buddha an einer bestimmten Stelle. ",
-  "mn83:2.2": "Da dachte der Ehrwürdige Ānanda: "
+  "mn83:2.2": "Da dachte der Ehrwürdige Ānanda: ",
+  "mn83:2.3": "„Was ist der Grund, was ist die Ursache, dass der Buddha gelächelt hat? "
 }
