--- a/translation/de/sabbamitta/sutta/mn/mn83_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn83_translation-de-sabbamitta.json
@@ -6,5 +6,6 @@
   "mn83:2.1": "Da lächelte der Buddha an einer bestimmten Stelle. ",
   "mn83:2.2": "Da dachte der Ehrwürdige Ānanda: ",
   "mn83:2.3": "„Was ist der Grund, was ist die Ursache, dass der Buddha gelächelt hat? ",
-  "mn83:2.4": "Klargewordene lächeln nicht ohne Grund.“ "
+  "mn83:2.4": "Klargewordene lächeln nicht ohne Grund.“ ",
+  "mn83:2.5": "Und Ānanda ordnete seine Robe über einer Schulter, erhob seine zusammengelegten Hände zum Buddha und sagte: "
 }
