--- a/translation/de/sabbamitta/sutta/an/an6/an6.54_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an6/an6.54_translation-de-sabbamitta.json
@@ -73,7 +73,7 @@
   "an6.54:12.6": "‚Es ist, wenn die, die Wurzeln, Rinde, Blätter, Blüten oder Früchte von dem Baum brauchen, diese nehmen. ",
   "an6.54:12.7": "Doch die Gottheit ist deswegen nicht verstimmt oder aufgebracht. ",
   "an6.54:12.8": "So steht ein Baum zu seiner Pflicht.‘ ",
-  "an6.54:12.9": "‚Ich habe meine Baumpflicht nicht erfüllt, als der Sturm losbrach und mein Zuhause umwarf und entwurzelte.‘ ",
+  "an6.54:12.9": "‚Ich habe nicht zu meiner Baumpflicht gestanden, als der Sturm losbrach und mein Zuhause umwarf und entwurzelte.‘ ",
   "an6.54:12.10": "‚Gott, wenn du deine Baumpflicht erfüllst, kann dein Zuhause wieder so werden, wie es war.‘ ",
   "an6.54:12.11": "‚Ich will meine Baumpflicht erfüllen! Mein Zuhause soll wieder so werden, wie es war!‘ ",
   "an6.54:13.1": "Und Sakka setzte seine übersinnliche Kraft ein und veranlasste, dass ein gewaltiger Sturm losbrach. Der richtete diesen gewaltigen Banyanbaum wieder auf, und die Wurzelrinde war vollständig heil. ",
