Translations by sabbamitta to translation/de/sabbamitta/sutta/an/an6/an6.54_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/an/an6/an6.54_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an6/an6.54_translation-de-sabbamitta.json
@@ -80,7 +80,7 @@
   "an6.54:13.2": "Ebenso, Brahmane Dhammika: Hast du zu deiner Asketenpflicht gestanden, als die einheimischen Laienschüler dich aus allen sieben Klöstern in deinem Heimatland vertrieben haben?“ ",
   "an6.54:13.3": "„Aber Herr, wie steht man zu seiner Asketenpflicht?“ ",
   "an6.54:13.4": "„Wenn jemand einen Asketen beschimpft, belästigt oder mit ihm streitet, beschimpft er den anderen nicht wieder, belästigt ihn nicht und streitet nicht mit ihm. ",
-  "an6.54:13.5": "So erfüllt ein Asket seine Asketenpflicht.“ ",
+  "an6.54:13.5": "So steht ein Asket zu seiner Asketenpflicht.“ ",
   "an6.54:13.6": "„Ich habe meine Asketenpflicht nicht erfüllt, als die einheimischen Laienschüler mich aus allen sieben Klöstern in meinem Heimatland vertrieben haben.“ ",
   "an6.54:13.7": "„Es war einmal ein Lehrer mit Namen Sunetta. Der war ein Religionsstifter und war frei von Begierde nach Sinnenfreuden. ",
   "an6.54:13.8": "Er hatte viele hundert Schüler. ",
