--- a/translation/de/sabbamitta/sutta/an/an5/an5.39_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an5/an5.39_translation-de-sabbamitta.json
@@ -5,7 +5,7 @@
   "an5.39:1.1": "„Mönche und Nonnen, Eltern haben fünf Gründe, aus denen sie wünschen, dass in der Familie ein Kind geboren wird. ",
   "an5.39:1.2": "Welche fünf? ",
   "an5.39:1.3": "Wenn wir für es sorgen, wird es für uns sorgen. ",
-  "an5.39:1.4": "Es wird uns gegenüber seine Pflicht erfüllen. ",
+  "an5.39:1.4": "Es wird für uns seine Pflicht tun. ",
   "an5.39:1.5": "Die Familienbräuche werden fortbestehen. ",
   "an5.39:1.6": "Es wird für das Erbe Sorge tragen. ",
   "an5.39:1.7": "Oder es wird, wenn wir gestorben sind, in unserem Namen eine Spende machen. ",
