--- a/translation/de/sabbamitta/sutta/an/an5/an5.39_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an5/an5.39_translation-de-sabbamitta.json
@@ -13,7 +13,7 @@
   "an5.39:2.1": "Aus fünf Gründen ",
   "an5.39:2.2": "wünschen kluge Menschen ein Kind: ",
   "an5.39:2.3": "Wenn wir für es sorgen, wird es für uns sorgen. ",
-  "an5.39:2.4": "Es wird uns gegenüber seine Pflicht erfüllen. ",
+  "an5.39:2.4": "Es wird für uns seine Pflicht tun. ",
   "an5.39:3.1": "Die Familienbräuche werden fortbestehen. ",
   "an5.39:3.2": "Es wird sich um das Erbe kümmern. ",
   "an5.39:3.3": "Oder es wird, wenn wir gestorben sind, ",
