--- a/translation/de/sabbamitta/sutta/dn/dn31_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn31_translation-de-sabbamitta.json
@@ -113,7 +113,7 @@
   "dn31:14.32": "entgehen ihnen Reichtümer. ",
   "dn31:14.33": "Aber wer Hitze und Kälte ",
   "dn31:14.34": "nur betrachtet wie Grashalme, ",
-  "dn31:14.35": "erfüllt seine Pflicht als Mann, ",
+  "dn31:14.35": "tut seine Pflicht als Mann, ",
   "dn31:14.36": "und das Glück lässt ihn nicht im Stich.“ ",
   "dn31:15.0": "11. Falsche Freunde ",
   "dn31:15.1": "„Hausbesitzersohn, diese vier Feinde, die als Freunde daherkommen, solltest du erkennen: ",
