Translations by sabbamitta to translation/de/sabbamitta/sutta/kn/thag/thag3.5_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/kn/thag/thag3.5_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thag/thag3.5_translation-de-sabbamitta.json
@@ -9,7 +9,7 @@
   "thag3.5:1.4": "entgehen ihnen Gelegenheiten. ",
   "thag3.5:2.1": "Aber wer Hitze und Kälte ",
   "thag3.5:2.2": "nur betrachtet wie Grashalme, ",
-  "thag3.5:2.3": "erfüllt seine Pflicht als Mann, ",
+  "thag3.5:2.3": "tut seine Pflicht als Mann, ",
   "thag3.5:2.4": "und das Glück lässt ihn nicht im Stich. ",
   "thag3.5:3.1": "Gräser, Ranken und Lianen, ",
   "thag3.5:3.2": "duftende Wurzeln, Binsen und Schilf ",
