--- a/translation/de/sabbamitta/sutta/an/an6/an6.16_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an6/an6.16_translation-de-sabbamitta.json
@@ -49,7 +49,7 @@
   "an6.16:7.1": "Hausbesitzer, du denkst vielleicht: ",
   "an6.16:7.2": "‚Nakulas Mutter, die Hausbesitzerin, hat keine Grundlage gewonnen, hat keine feste Grundlage und keinen Trost in dieser Lehre und Schulung gefunden. Sie ist nicht über den Zweifel hinausgegangen, hat sich nicht von Unschlüssigkeit frei gemacht und kein Selbstvertrauen gewonnen. Sie ist in der Anleitung des Lehrers nicht von anderen unabhängig.‘ ",
   "an6.16:7.3": "Aber so sollst du es nicht sehen. ",
-  "an6.16:7.4": "Ich gehöre zu den weiß gekleideten Schülerinnen des Buddha, die eine Grundlage gewonnen haben, die eine feste Grundlage und einen Trost in dieser Lehre und Schulung gefunden haben. Ich bin über den Zweifel hinausgegangen, habe mich von Unschlüssigkeit frei gemacht und habe Selbstvertrauen gewonnen. Ich bin in der Anleitung des Lehrers von anderen unabhängig.‘ ",
+  "an6.16:7.4": "Ich gehöre zu den weiß gekleideten Schülerinnen des Buddha, die eine Grundlage gewonnen haben, die eine feste Grundlage und einen Trost in dieser Lehre und Schulung gefunden haben. Ich bin über den Zweifel hinausgegangen, habe mich von Unschlüssigkeit frei gemacht und habe Selbstvertrauen gewonnen. Ich bin in der Anleitung des Lehrers von anderen unabhängig. ",
   "an6.16:7.5": "Wer daran zweifelt, kann zum Buddha gehen und ihn fragen. Er hält sich im Land der Bhagger bei Krokodilhügel auf, im Wildpark bei Bhesakaḷās Wald. ",
   "an6.16:7.6": "Daher, Hausbesitzer, stirb nicht mit Sorgen. ",
   "an6.16:7.7": "Mit Sorgen zu sterben, ist Leiden, ",
