--- a/translation/de/sabbamitta/sutta/mn/mn83_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn83_translation-de-sabbamitta.json
@@ -10,5 +10,6 @@
   "mn83:2.5": "Und Ānanda ordnete seine Robe über einer Schulter, erhob seine zusammengelegten Hände zum Buddha und sagte: ",
   "mn83:2.6": "„Was ist der Grund, was ist die Ursache, dass der Buddha gelächelt hat? ",
   "mn83:2.7": "Klargewordene lächeln nicht ohne Grund.“ ",
-  "mn83:3.1": "„Es war einmal, Ānanda, eben hier in Mithilā ein gerechter und prinzipientreuer König mit Namen Maghadeva, ein großer König, der zu seiner Pflicht stand. "
+  "mn83:3.1": "„Es war einmal, Ānanda, eben hier in Mithilā ein gerechter und prinzipientreuer König mit Namen Maghadeva, ein großer König, der zu seiner Pflicht stand. ",
+  "mn83:3.2": "Brahmanen und Hausbesitzer sowie die Menschen aus Stadt und Land behandelte er gerecht. "
 }
