--- a/translation/de/sabbamitta/sutta/an/an4/an4.70_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an4/an4.70_translation-de-sabbamitta.json
@@ -4,7 +4,7 @@
   "an4.70:0.3": "Prinzipienlos ",
   "an4.70:1.1": "„Zu einer Zeit, zu der Könige prinzipienlos sind, werden auch königliche Beamte prinzipienlos. ",
   "an4.70:1.2": "Wenn königliche Beamte prinzipienlos sind, werden auch Brahmanen und Hausbesitzer prinzipienlos. ",
-  "an4.70:1.3": "Wenn Brahmanen und Hausbesitzer prinzipienlos sind, werden auch die Menschen in Stadt und Land prinzipienlos. ",
+  "an4.70:1.3": "Wenn Brahmanen und Hausbesitzer prinzipienlos sind, werden auch die Menschen aus Stadt und Land prinzipienlos. ",
   "an4.70:1.4": "Wenn die Menschen in Stadt und Land prinzipienlos sind, wird der Lauf von Sonne und Mond unregelmäßig. ",
   "an4.70:1.5": "… bewegen sich die Sterne und Sternbilder unregelmäßig. ",
   "an4.70:1.6": "… werden Tage und Nächte unregelmäßig. ",
