--- a/translation/de/sabbamitta/sutta/an/an5/an5.135_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an5/an5.135_translation-de-sabbamitta.json
@@ -16,7 +16,7 @@
   "an5.135:2.5": "Warum sollte ich nicht nach der Königswürde streben? ",
   "an5.135:2.6": "Ich bin meinen Eltern lieb und teuer. ",
   "an5.135:2.7": "Warum sollte ich nicht nach der Königswürde streben? ",
-  "an5.135:2.8": "Ich bin den Menschen in Stadt und Land lieb und teuer. ",
+  "an5.135:2.8": "Ich bin den Menschen aus Stadt und Land lieb und teuer. ",
   "an5.135:2.9": "Warum sollte ich nicht nach der Königswürde streben? ",
   "an5.135:2.10": "Ich bin geübt und geschickt in den Künsten eines gesalbten adligen Königs: Elefanten- und Pferdereiten, Streitwagenfahren, Bogenschießen und Schwertkampf. ",
   "an5.135:2.11": "Warum sollte ich nicht nach der Königswürde streben? ",
