--- a/translation/de/sabbamitta/sutta/an/an5/an5.133_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an5/an5.133_translation-de-sabbamitta.json
@@ -7,7 +7,7 @@
   "an5.133:1.3": "„Aber wer ist der König über dem Rad-drehenden Herrscher, dem gerechten und prinzipientreuen König?“ ",
   "an5.133:1.4": "„Es ist das Prinzip, Mönch“, sagte der Buddha. ",
   "an5.133:2.1": "„Mönch, ein Rad-drehender Herrscher stellt seinem Hof gerechten Schutz und Sicherheit bereit, indem er sich nur auf das Prinzip stützt; er erkennt das Prinzip an, ehrt und achtet es und hält es hoch, das Prinzip ist seine Fahne, sein Banner und seine Autorität. ",
-  "an5.133:3.1": "Er stellt seinen Adligen gerechten Schutz und Sicherheit bereit, ebenso seinen Lehnsleuten, Truppen, Brahmanen und Hausbesitzern, Menschen in Stadt und Land, Asketen und Brahmanen, Tieren und Vögeln. ",
+  "an5.133:3.1": "Er stellt seinen Adligen gerechten Schutz und Sicherheit bereit, ebenso seinen Lehnsleuten, Truppen, Brahmanen und Hausbesitzern, Menschen aus Stadt und Land, Asketen und Brahmanen, Tieren und Vögeln. ",
   "an5.133:3.2": "Und wenn er das getan hat, übt er seine Macht nur auf prinzipientreue Art aus. ",
   "an5.133:3.3": "Und diese Macht kann von keinem menschlichen Feind untergraben werden. ",
   "an5.133:4.1": "Ebenso, Mönch, stellt ein Klargewordener, ein Vollendeter, ein vollkommen erwachter Buddha, ein gerechter und prinzipientreuer König, den Mönchen gerechten Schutz und Sicherheit bereit, indem er sich nur auf das Prinzip stützt; er erkennt das Prinzip an, ehrt und achtet es und hält es hoch, das Prinzip ist seine Fahne, sein Banner und seine Autorität: ",
