Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn3/sn3.18_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn3/sn3.18_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn3/sn3.18_translation-de-sabbamitta.json
@@ -28,7 +28,7 @@
   "sn3.18:9.1": "Wenn du beflissen bist, auf Beflissenheit gestützt, werden deine Haremsdamen, ",
   "sn3.18:10.1": "deine adligen Lehnsleute, ",
   "sn3.18:11.1": "deine Truppen ",
-  "sn3.18:12.1": "und die Menschen in Stadt und Land denken: ",
+  "sn3.18:12.1": "und die Menschen aus Stadt und Land denken: ",
   "sn3.18:12.2": "‚Der König lebt beflissen, er stützt sich auf Beflissenheit. ",
   "sn3.18:12.3": "Wir sollten besser beflissen leben, uns auf Beflissenheit stützen!‘ ",
   "sn3.18:13.1": "Wenn du beflissen bist, auf Beflissenheit gestützt, wirst nicht nur du selbst, ",
