--- a/translation/de/sabbamitta/sutta/an/an6/an6.54_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an6/an6.54_translation-de-sabbamitta.json
@@ -54,7 +54,7 @@
   "an6.54:9.4": "wie ein Reistopf, ",
   "an6.54:9.5": "und sie waren so süß ",
   "an6.54:9.6": "wie reiner wilder Honig. ",
-  "an6.54:9.7": "Der König und sein Harem aßen von einem Stamm, das Heer von einem anderen, die Menschen in Stadt und Land von einem anderen, Asketen und Brahmanen von einem anderen und Tiere und Vögel wieder von einem anderen. ",
+  "an6.54:9.7": "Der König und sein Harem aßen von einem Stamm, das Heer von einem anderen, die Menschen aus Stadt und Land von einem anderen, Asketen und Brahmanen von einem anderen und Tiere und Vögel wieder von einem anderen. ",
   "an6.54:9.8": "Niemand bewachte die Früchte, doch niemand beschädigte die Früchte eines anderen. ",
   "an6.54:10.1": "Dann aß sich da ein gewisser Mensch an den Früchten ordentlich satt, brach einen Ast ab und ging damit weg. ",
   "an6.54:10.2": "Da dachte die Gottheit, die in dem königlichen Banyanbaum hauste: ",
