Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn83_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn83_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn83_translation-de-sabbamitta.json
@@ -12,5 +12,6 @@
   "mn83:2.7": "Klargewordene lächeln nicht ohne Grund.“ ",
   "mn83:3.1": "„Es war einmal, Ānanda, eben hier in Mithilā ein gerechter und prinzipientreuer König mit Namen Maghadeva, ein großer König, der zu seiner Pflicht stand. ",
   "mn83:3.2": "Brahmanen und Hausbesitzer sowie die Menschen aus Stadt und Land behandelte er gerecht. ",
-  "mn83:3.3": "Und er hielt am vierzehnten, fünfzehnten und achten Tag der Monatshälfte den Besinnungstag ein. "
+  "mn83:3.3": "Und er hielt am vierzehnten, fünfzehnten und achten Tag der Monatshälfte den Besinnungstag ein. ",
+  "mn83:4.1": "Nachdem dann viele Jahre, viele tausend Jahre vergangen waren, wandte sich König Maghadeva an seinen Barbier: "
 }
