--- a/translation/de/sabbamitta/sutta/dn/dn14_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn14_translation-de-sabbamitta.json
@@ -336,7 +336,7 @@
   "dn14:2.12.2": "‚Der Prinz Vipassī darf nicht dem Thron entsagen. Er darf nicht aus dem Haus fortziehen ins hauslose Leben. Und die Worte der brahmanischen Wahrsager dürfen sich nicht erfüllen.‘ ",
   "dn14:2.12.3": "Zu diesem Zweck versorgte er den Prinzen noch mehr mit den fünf Arten sinnlicher Erregung, ",
   "dn14:2.13.1": "und der Prinz vergnügte sich mit ihnen. ",
-  "dn14:2.13.2": "Nachdem dann viele Jahre, viele tausend Jahre vergangen waren, ließ sich Prinz Vipassī wieder von seinem Wagenlenker zum Park fahren. ",
+  "dn14:2.13.2": "Nachdem dann viele Jahre, viele hundert Jahre, viele tausend Jahre vergangen waren, ließ sich Prinz Vipassī wieder von seinem Wagenlenker zum Park fahren. ",
   "dn14:2.14.1": "Am Weg sah er einen Mann, einen Hauslosen mit geschorenem Kopf, der eine ockerfarbene Robe trug. ",
   "dn14:2.14.2": "Er wandte sich an seinen Wagenlenker: ",
   "dn14:2.14.3": "‚Mein lieber Wagenlenker, was hat dieser Mann getan? ",
