--- a/translation/de/sabbamitta/sutta/dn/dn14_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn14_translation-de-sabbamitta.json
@@ -253,7 +253,7 @@
   "dn14:1.38.3": "Der Prinz Vipassī blieb während der vier Monate der Regenzeit in seinem Pfahlhaus, ohne die Treppe herunterzukommen. Dort wurde er von Musikerinnen unterhalten, unter denen kein einziger Mann war. ",
   "dn14:1.38.4": "Der erste Abschnitt zum Aufsagen. ",
   "dn14:2.1.0": "5. Der Alte ",
-  "dn14:2.1.1": "Nachdem dann viele Jahre, viele tausend Jahre vergangen waren, wandte sich Prinz Vipassī an seinen Wagenlenker: ",
+  "dn14:2.1.1": "Nachdem dann viele Jahre, viele hundert Jahre, viele tausend Jahre vergangen waren, wandte sich Prinz Vipassī an seinen Wagenlenker: ",
   "dn14:2.1.2": "‚Mein lieber Wagenlenker, spanne die erlesensten Kutschen an. Wir wollen zu einem Park fahren und die Landschaft betrachten.‘ ",
   "dn14:2.1.3": "‚Ja, Herr‘, antwortete der Wagenlenker. Er spannte die Kutschen an und unterrichtete den Prinzen: ",
   "dn14:2.1.4": "‚Majestät, die erlesensten Kutschen sind angespannt. ",
