--- a/translation/de/sabbamitta/sutta/mn/mn83_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn83_translation-de-sabbamitta.json
@@ -13,5 +13,5 @@
   "mn83:3.1": "„Es war einmal, Ānanda, eben hier in Mithilā ein gerechter und prinzipientreuer König mit Namen Maghadeva, ein großer König, der zu seiner Pflicht stand. ",
   "mn83:3.2": "Brahmanen und Hausbesitzer sowie die Menschen aus Stadt und Land behandelte er gerecht. ",
   "mn83:3.3": "Und er hielt am vierzehnten, fünfzehnten und achten Tag der Monatshälfte den Besinnungstag ein. ",
-  "mn83:4.1": "Nachdem dann viele Jahre, viele tausend Jahre vergangen waren, wandte sich König Maghadeva an seinen Barbier: "
+  "mn83:4.1": "Nachdem dann viele Jahre, viele hundert Jahre, viele tausend Jahre vergangen waren, wandte sich König Maghadeva an seinen Barbier: "
 }
