Translations by sabbamitta to translation/de/sabbamitta/sutta/dn/dn26_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/dn/dn26_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn26_translation-de-sabbamitta.json
@@ -27,7 +27,7 @@
   "dn26:3.1": "Nachdem dann viele Jahre, viele hundert Jahre, viele tausend Jahre vergangen waren, wandte sich König Daḷhanemi an einen seiner Männer: ",
   "dn26:3.2": "‚Mein guter Mann, wenn du siehst, dass das himmlische Rad-Juwel von seinem Platz zurückgewichen ist, sag es mir bitte.‘ ",
   "dn26:3.3": "‚Ja, Majestät‘, antwortete der Mann. ",
-  "dn26:3.4": "Nachdem viele tausend Jahre vergangen waren, sah dieser Mann, dass das himmlische Rad-Juwel von seinem Platz zurückgewichen war. Da ging er zum König Daḷhanemi und meldete: ",
+  "dn26:3.4": "Nachdem viele Jahre, viele hundert Jahre, viele tausend Jahre vergangen waren, sah dieser Mann, dass das himmlische Rad-Juwel von seinem Platz zurückgewichen war. Da ging er zum König Daḷhanemi und meldete: ",
   "dn26:3.5": "‚Bitte, Majestät, du sollst wissen, dass das himmlische Rad-Juwel von seinem Platz zurückgewichen ist.‘ ",
   "dn26:3.6": "Da ließ der König den Kronprinzen rufen und sagte: ",
   "dn26:3.7": "‚Lieber Prinz, mein himmlisches Rad-Juwel ist von seinem Platz zurückgewichen. ",
