Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn83_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn83_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn83_translation-de-sabbamitta.json
@@ -14,5 +14,6 @@
   "mn83:3.2": "Brahmanen und Hausbesitzer sowie die Menschen aus Stadt und Land behandelte er gerecht. ",
   "mn83:3.3": "Und er hielt am vierzehnten, fünfzehnten und achten Tag der Monatshälfte den Besinnungstag ein. ",
   "mn83:4.1": "Nachdem dann viele Jahre, viele hundert Jahre, viele tausend Jahre vergangen waren, wandte sich König Maghadeva an seinen Barbier: ",
-  "mn83:4.2": "‚Mein lieber Barbier, wenn du auf meinem Kopf graue Haare wachsen siehst, sage es mir bitte.‘ "
+  "mn83:4.2": "‚Mein lieber Barbier, wenn du auf meinem Kopf graue Haare wachsen siehst, sage es mir bitte.‘ ",
+  "mn83:4.3": "‚Ja, Majestät‘, antwortete der Barbier. "
 }
