Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn83_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn83_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn83_translation-de-sabbamitta.json
@@ -15,5 +15,6 @@
   "mn83:3.3": "Und er hielt am vierzehnten, fünfzehnten und achten Tag der Monatshälfte den Besinnungstag ein. ",
   "mn83:4.1": "Nachdem dann viele Jahre, viele hundert Jahre, viele tausend Jahre vergangen waren, wandte sich König Maghadeva an seinen Barbier: ",
   "mn83:4.2": "‚Mein lieber Barbier, wenn du auf meinem Kopf graue Haare wachsen siehst, sage es mir bitte.‘ ",
-  "mn83:4.3": "‚Ja, Majestät‘, antwortete der Barbier. "
+  "mn83:4.3": "‚Ja, Majestät‘, antwortete der Barbier. ",
+  "mn83:4.4": "Nachdem dann viele Jahre, viele hundert Jahre, viele tausend Jahre vergangen waren, sah der Barbier auf dem Kopf des Königs graue Haare wachsen. "
 }
