--- a/translation/de/sabbamitta/sutta/mn/mn83_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn83_translation-de-sabbamitta.json
@@ -16,5 +16,6 @@
   "mn83:4.1": "Nachdem dann viele Jahre, viele hundert Jahre, viele tausend Jahre vergangen waren, wandte sich König Maghadeva an seinen Barbier: ",
   "mn83:4.2": "‚Mein lieber Barbier, wenn du auf meinem Kopf graue Haare wachsen siehst, sage es mir bitte.‘ ",
   "mn83:4.3": "‚Ja, Majestät‘, antwortete der Barbier. ",
-  "mn83:4.4": "Nachdem dann viele Jahre, viele hundert Jahre, viele tausend Jahre vergangen waren, sah der Barbier auf dem Kopf des Königs graue Haare wachsen. "
+  "mn83:4.4": "Nachdem dann viele Jahre, viele hundert Jahre, viele tausend Jahre vergangen waren, sah der Barbier auf dem Kopf des Königs graue Haare wachsen. ",
+  "mn83:4.5": "Er sagte zum König: "
 }
