--- a/translation/de/sabbamitta/sutta/mn/mn83_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn83_translation-de-sabbamitta.json
@@ -17,5 +17,6 @@
   "mn83:4.2": "‚Mein lieber Barbier, wenn du auf meinem Kopf graue Haare wachsen siehst, sage es mir bitte.‘ ",
   "mn83:4.3": "‚Ja, Majestät‘, antwortete der Barbier. ",
   "mn83:4.4": "Nachdem dann viele Jahre, viele hundert Jahre, viele tausend Jahre vergangen waren, sah der Barbier auf dem Kopf des Königs graue Haare wachsen. ",
-  "mn83:4.5": "Er sagte zum König: "
+  "mn83:4.5": "Er sagte zum König: ",
+  "mn83:4.6": "‚Die Götterboten haben sich dir gezeigt. Auf deinem Kopf kann man graue Haare wachsen sehen.‘ "
 }
