Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn83_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn83_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn83_translation-de-sabbamitta.json
@@ -18,5 +18,6 @@
   "mn83:4.3": "‚Ja, Majestät‘, antwortete der Barbier. ",
   "mn83:4.4": "Nachdem dann viele Jahre, viele hundert Jahre, viele tausend Jahre vergangen waren, sah der Barbier auf dem Kopf des Königs graue Haare wachsen. ",
   "mn83:4.5": "Er sagte zum König: ",
-  "mn83:4.6": "‚Die Götterboten haben sich dir gezeigt. Auf deinem Kopf kann man graue Haare wachsen sehen.‘ "
+  "mn83:4.6": "‚Die Götterboten haben sich dir gezeigt. Auf deinem Kopf kann man graue Haare wachsen sehen.‘ ",
+  "mn83:4.7": "‚Nun, mein lieber Barbier, ziehe sie vorsichtig mit einer Pinzette heraus und lege sie mir auf die zusammengelegten Hände.‘ "
 }
