--- a/translation/de/sabbamitta/sutta/mn/mn83_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn83_translation-de-sabbamitta.json
@@ -21,5 +21,6 @@
   "mn83:4.6": "‚Die Götterboten sind dir erschienen. Auf deinem Kopf kann man graue Haare wachsen sehen.‘ ",
   "mn83:4.7": "‚Nun, mein lieber Barbier, ziehe sie vorsichtig mit einer Pinzette heraus und lege sie mir auf die zusammengelegten Hände.‘ ",
   "mn83:4.8": "‚Ja, Majestät‘, antwortete der Barbier und tat wie geheißen. ",
-  "mn83:4.9": "Der König gab dem Barbier ein Beute-Dorf, ließ den Kronprinzen rufen und sagte: "
+  "mn83:4.9": "Der König gab dem Barbier ein Beute-Dorf, ließ den Kronprinzen rufen und sagte: ",
+  "mn83:4.10": "‚Lieber Prinz, die Götterboten sind mir erschienen. "
 }
