--- a/translation/de/sabbamitta/sutta/mn/mn83_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn83_translation-de-sabbamitta.json
@@ -25,5 +25,6 @@
   "mn83:4.10": "‚Lieber Prinz, die Götterboten sind mir erschienen. ",
   "mn83:4.11": "Auf meinem Kopf kann man graue Haare wachsen sehen. ",
   "mn83:4.12": "Ich habe menschliche Freuden genossen. ",
-  "mn83:4.13": "Nun ist es an der Zeit, dass ich mich um himmlische Freuden bemühe. "
+  "mn83:4.13": "Nun ist es an der Zeit, dass ich mich um himmlische Freuden bemühe. ",
+  "mn83:4.14": "Komm, lieber Prinz, herrsche über das Reich! "
 }
