Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn83_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn83_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn83_translation-de-sabbamitta.json
@@ -32,5 +32,6 @@
   "mn83:4.17": "Führe diesen guten Brauch fort, den ich begründet habe. Sei nicht mein letzter Mann. ",
   "mn83:4.18": "Wenn ein Paar von Männern lebt, so ist derjenige, der so einen guten Brauch abbricht, ihr letzter Mann. ",
   "mn83:4.19": "Daher sage ich zu dir: ",
-  "mn83:4.20": "„Führe diesen guten Brauch fort, den ich begründet habe. Sei nicht mein letzter Mann.“‘ "
+  "mn83:4.20": "„Führe diesen guten Brauch fort, den ich begründet habe. Sei nicht mein letzter Mann.“‘ ",
+  "mn83:5.1": "Und nachdem er so dem Barbier ein Beute-Dorf gegeben und den Kronprinzen sorgfältig ins Königtum eingewiesen hatte, rasierte ich der König Maghadeva Haar und Bart, legte ockerfarbene Roben an und zog hier in diesem Mangowäldchen aus dem Haus fort ins hauslose Leben. "
 }
