Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn108_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn108_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn108_translation-it-giovannizappa.json
@@ -77,7 +77,7 @@
   "mn108:20.7": "e la mente senza illusione come ‘mente senza illusione.’ ",
   "mn108:20.8": "Comprende la mente ristretta come ‘mente ristretta,’ ",
   "mn108:20.9": "e la mente sparpagliata come ‘mente sparpagliata.’ ",
-  "mn108:20.10": "una mente espansiva come “mente espansiva”, ",
+  "mn108:20.10": "Comprende la mente espansiva come ‘mente espansiva,’ ",
   "mn108:20.11": "e una mente non espansiva come “mente non espansiva”; ",
   "mn108:20.12": "una mente non suprema come “mente non suprema”, ",
   "mn108:20.13": "e una mente suprema come ‘mente suprema’; ",
