Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn108_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn108_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn108_translation-it-giovannizappa.json
@@ -81,7 +81,7 @@
   "mn108:20.11": "e la mente non espansiva come ‘mente non espansiva.’ ",
   "mn108:20.12": "Comprende la mente non suprema come ‘mente non suprema,’ ",
   "mn108:20.13": "e la mente suprema come ‘mente suprema.’ ",
-  "mn108:20.14": "una mente concentrata come “mente concentrata”, ",
+  "mn108:20.14": "Comprende la mente concentrata come ‘mente concentrata’, ",
   "mn108:20.15": "e una mente non concentrata come “mente non concentrata”; ",
   "mn108:20.16": "una mente libera come ‘mente libera’, ",
   "mn108:20.17": "e una mente non libera come ‘mente non libera’. ",
